RWA-1712 (#713)
* RWA-1712: java 17 upgrade

* RWA-1712: java 17 upgrade

* RWA-1712: pmd upgrade for java 17

* Update ruleset.xml

* Update ruleset.xml

* PMD fixes

* PMDfixes

* PMDfixes

* PMD Fixes

* RWA-1712 Resolving sonar cloud errors and PMD Fixes

* RWA-1712 Resolving sonar cloud errors Minor

* Amended time-out Issue

* Amended time-out Issue

* Amended time-out Issue

* Amended Local Time issue.

* Amended Local Time issue.

* Amended Local Time issue.

* Amended Local Time issue.

* Amended Local Time issue.

Co-authored-by: abhiahirv1 <117448561+abhiahirv1@users.noreply.github.com>
Co-authored-by: abhiahirv1 <abhi.ahir@hmcts.net>